2010-01-06  vadim  <vadim@vk.crocodile.org>

	* CompilerDriver_pf.cpp (CompilerDriver_pf::getRemoteConfFileName):
	fixed bug #1049 '(windows only) installer uses incorrect path on
	the OpenBSD firewall'

2010-01-01  vadim  <vadim@vk.crocodile.org>

	* instOptionsDialog.cpp (instOptionsDialog::instOptionsDialog):
	fixed bug #1043: added explanation of the risk associated with
	password caching to the Preferences dialog and Release Notes;
	checkbox "remember passwords" will be disabled if user name is not
	configured

	* ObjectManipulator_tree_ops.cpp (ObjectManipulator::updateLibName):
	fixed bug #1042: editing name of a library updates it in the tree
	but does not update it in the drop-down list

2009-12-29  vadim  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::restoreCurrentRowColumn): fixed
	bug that caused rule set view to scroll all the way to the top
	every time user modified any object used in the rules. Fixes #968

2009-12-28  vadim  <vadim@vk.crocodile.org>

	Ticket #1040 (Another GUI crash in newClusterDialog) closed by a2k
	fixed

	Ticket #1038 (GUI crash in newClusterDialog on Ubuntu 8.04) closed
	by a2k fixed: (In [2296]) Fixed #1038

	Ticket #1014 (fix tab order of elements in iptadvanceddialog_q.ui)
	closed by a2k fixed: (In [2292]) Fixed #1013, #1014, #1015, #1016,
	#1017

	Ticket #1015 (fix tab order in pixadvanceddialog_q.ui) closed by
	a2k fixed: (In [2292]) Fixed #1013, #1014, #1015, #1016, #1017

	Ticket #1016 (fix tab order in pfadvanceddialog_q.ui) closed by
	a2k fixed: (In [2292]) Fixed #1013, #1014, #1015, #1016, #1017

	Ticket #1017 (fix tab order in openbsdadvanceddialog_q.ui) closed
	by a2k fixed: (In [2292]) Fixed #1013, #1014, #1015, #1016, #1017

	Ticket #1013 (fix tab order of elements in
	iosacladvanceddialog_q.ui) closed by a2k fixed: (In [2292]) Fixed
	#1013, #1014, #1015, #1016, #1017

	Ticket #1030 (firewall name should be prepended with library name
	in the list on the ...) closed by a2k fixed: (In [2290]) Fixed