@@ -1,5 +1,9 @@
 2010-01-06  vadim  <vadim@vk.crocodile.org>
 
+	* ObjectManipulator_create_new.cpp (ObjectManipulator::newInterface):
+	fixed bug #1051: GUI crash when user tried to add an interface to
+	an interface.
+
 	* CompilerDriver_pf.cpp (CompilerDriver_pf::getRemoteConfFileName):
 	fixed bug #1049 '(windows only) installer uses incorrect path on
 	the OpenBSD firewall'
